[tool.poetry]
name = "lambda-ec2-ecs-comparison"
version = "0.1.0"
description = ""
authors = ["Michael Kingston <71872141+mkingopng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "^2.132.0"
aws-cdk-aws-lambda-python-alpha = "^2.132.0a0"
aws-cdk-aws-apigatewayv2-integrations-alpha = "^2.114.1a0"
aws-cdk-aws-apigatewayv2-alpha = "^2.114.1a0"
constructs = "^10.3.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
